--- a/webapp/package.json
+++ b/webapp/package.json
@@ -19,6 +19,7 @@
     "@tabler/icons-react": "^3.36.0",
     "dayjs": "^1.11.19",
     "geopattern": "^1.2.3",
+    "jwt-decode": "^4.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1",
